# ldapsync

./: .gitignore  README.md  ldapsync.example.yaml  setup.cfg  versions.txt
ldapsync/: cli.py  config_default.yaml  sync.py
