[metadata]
name = ldapsync
version = 1.0.0
license = MIT
description = Synchronize LDAPs
author = Thomas Buchberger
author_email = t.buchberger@4teamwork.ch
url = https://github.com/4teamwork/ldapsync
classifiers = 
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >= 3.7
setup_requires =
  setuptools >= 40.6
install_requires =
    confuse
    ldap3

[options.extras_require]
test =
    pytest
    pytest-cov
    flake8
    flake8-bugbear
dev =
    pdbpp

[options.entry_points]
console_scripts =
    ldapsync = ldapsync.cli:main

[tool:release]
github_owner = buchi
github_repo = ldapsync

[flake8]
max-line-length = 80
select = C,E,F,W,B,B950
ignore = E501

